--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <nav>
         <img class="logo" src="src/images/logo.png" alt="logo">
         <ul>
-          <li>About Me</li>
-          <li>Projects</li>
-          <li>Contact Me</li>
+          <li><a href="#about-me">About Me</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contacts">Contact Me</a></li>
         </ul>
       </nav>
       <div class="hero-area">
@@ -41,7 +41,7 @@
           </div>
         </div>
     </section>
-    <section class="sub-section">
+    <section class="sub-section" id="about-me">
       <div class="information">
         <h2>About Me</h2>
         <p>Hello. My name is Sushant . I am a softwre developer.</p>
@@ -50,7 +50,7 @@
         <img class="headshot" src="src/images/Sushant.png" alt="tt">
       </div>
     </section>
-    <section class="alternative">
+    <section class="alternative" id="projects">
        <h2>Projects</h2>
      <div class="project-container">
        <div class="project-card">
@@ -83,7 +83,12 @@
        </div>
      </div>
       </section>
-    <footer></footer>
+    <footer id="contacts">
+      <div class="cont">
+      <h2>Contact Me</h2>
+      <p>sushantbhosale@gmail.com</p>
+    </div>
+    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
